# Dukpyra

./: .gitignore  ARCHITECTURE.md  Lexer.py  PROGRESS_REPORT.md  Parser.py  README.md  cli.py  compiler.py  input.py  pyproject.toml  ref.md  setup-dukpyra.sh
dukpyra-compiler/: .gitignore  README.md  debug_tokens.py  pytest.ini  requirements.txt  setup.py  test_runtime_enhanced.py
dukpyra-compiler/backend-test/: FINAL_REPORT.md  README.md  RUNTIME_PROFILING.md  TEST_RESULTS.md  main.py  models.py  profile_test.py  run_tests.sh  test_compiler.py  test_final.sh  test_research.sh  test_runtime_profiling.py  test_simple.py
dukpyra-compiler/dukpyra/: __init__.py  analyzer.py  ast.py  cli.py  codegen.py  lexer.py  parser.out  parser.py  parsetab.py  runtime.py
dukpyra-compiler/examples/simple-api/: main.py
dukpyra-compiler/tests/: _TEST_README.py  test_abstraction.py  test_analyzer.py  test_codegen.py  test_lexer.py  test_linq.py  test_raw_csharp.py  test_runtime.py
my-test-backend/: README.md  main.py
services/: Program.cs
services/Properties/: launchSettings.json
