[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dukpyra"
version = "0.0.1"
description = "🔮 Python → C# JIT Compiler for Web APIs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rock"}
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "watchdog>=3.0.0",
    "jinja2>=3.0.0",
]

[project.scripts]
dukpyra = "cli:app"

[project.urls]
Homepage = "https://github.com/rock/dukpyra"

[tool.setuptools]
py-modules = ["cli", "compiler"]
